# generator

./: .gitignore  .typos.toml  2  Cargo.toml  README.md  my_flutter_config.yaml  pubspec.yaml  sample.md
flavor/: .env.sample  prod.env
integration_test/: simple_test.dart
resources/flutter/: .editorconfig  .gitignore  analysis_options.yaml  slang.yaml
resources/flutter/l10n/: app_en.arb  app_ja.arb
resources/flutter/lib/: main.dart  main_dev.dart  main_own.dart
resources/flutter/middleware/: shelf_server.dart
resources/terraform/: .editorconfig  .gitignore  biome.json  samconfig.toml
resources/terraform/events/: sample_event.json
src/: aws.rs  config.rs  error.rs  flutter.rs  init_flutter_app.rs  main.rs  terraform.rs  utils.rs
src/aws/: region.rs
src/aws/api_gateway_handler/: template.rs
src/aws/dynamodb/: config.rs  template.rs
src/aws/lambda/: template.rs
src/config/: init.rs
src/dynamodb/: config.rs  template.rs
src/flutter/: config.rs  flutter_template.rs  format.rs  generator.rs  init.rs  route_path_template.rs  template.rs  template_domain.rs  template_i18n.rs  template_navigation.rs  template_provider.rs  template_use_case.rs  template_widget.rs  use_case_template.rs
src/flutter/generator/: template_i18n.rs  template_navigation.rs  template_use_case.rs  template_widget.rs
src/resources/: build.yaml  l10n.yaml
src/terraform/: init.rs
templates/: main.dart
templates/dynamodb/: accessor.py
templates/navigation/: main_router_delegate.dart  navigation_state.dart  navigation_state_provider.dart  route_path.dart
(+92 files in other folders)
