[package]
name = "easy_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
change-case = "0.2.0"
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
git2 = "0.19.0"
include_dir = { version = "0.7.4", features = ["glob"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
thiserror = "2.0.6"
toml = "0.8.19"

